deploy: c14c2b3ea13d5034b890ede97e2a1eec1d76a4ab

--- a/recipes/bulgar_wheat_with_pine_nuts_carrot_and_feta/index.html
+++ b/recipes/bulgar_wheat_with_pine_nuts_carrot_and_feta/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Bulgar Wheat with Pine Nuts, Carrot and Feta | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Bulgar Wheat with Pine Nuts, Carrot and Feta" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  300g bulgur wheat 70g sultanas 500ml hot vegetable/chicken stock 2 medium carrots, coarsely grated 3 tbsp pine nuts 100g feta, crumbled (about half a packet) juice &amp; zest 1/2 lemon 3 tbsp rapeseed/olive oil  Method  Put the bulgur and sultanas in a large bowl and pour over the hot stock. Cover with cling film and leave for 20-30 mins for the liquid to be absorbed. After the soaking, fluff the grains with a fork and leave to cool." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 300g bulgur wheat 70g sultanas 500ml hot vegetable/chicken stock 2 medium carrots, coarsely grated 3 tbsp pine nuts 100g feta, crumbled (about half a packet) juice &amp; zest 1/2 lemon 3 tbsp rapeseed/olive oil Method Put the bulgur and sultanas in a large bowl and pour over the hot stock. Cover with cling film and leave for 20-30 mins for the liquid to be absorbed. After the soaking, fluff the grains with a fork and leave to cool." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/bulgar_wheat_with_pine_nuts_carrot_and_feta/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  300g bulgur wheat 70g sultanas 500ml hot vegetable/chicken stock 2 medium carrots, coarsely grated 3 tbsp pine nuts 100g feta, crumbled (about half a packet) juice &amp; zest 1/2 lemon 3 tbsp rapeseed/olive oil  Method  Put the bulgur and sultanas in a large bowl and pour over the hot stock. Cover with cling film and leave for 20-30 mins for the liquid to be absorbed. After the soaking, fluff the grains with a fork and leave to cool." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 300g bulgur wheat 70g sultanas 500ml hot vegetable/chicken stock 2 medium carrots, coarsely grated 3 tbsp pine nuts 100g feta, crumbled (about half a packet) juice &amp; zest 1/2 lemon 3 tbsp rapeseed/olive oil Method Put the bulgur and sultanas in a large bowl and pour over the hot stock. Cover with cling film and leave for 20-30 mins for the liquid to be absorbed. After the soaking, fluff the grains with a fork and leave to cool." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
