--- a/recipes/chorizo_linguine/index.html
+++ b/recipes/chorizo_linguine/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chorizo Linguine | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Chorizo Linguine" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 people’s worth linguine, ~120g? 1/3 ring of chorizo, cut into thick quarter moons Juice of half a large lemon Handful fresh parsley, around 6 stems, plucked and finely chopped 2 tbsp capers, drained ~60g grated Parmesan/gran padano  Method  Bring a pot of heavily salted water to the boil and add the pasta, cooking until al-dente (roughly 8 minutes) Meanwhile in a large frying pan, fry the chorizo in a small bit of olive oil until it gives up its oil and becomes crispy Lower the heat and add the capers and fry for a minute, stirring frequently." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 2 people’s worth linguine, ~120g? 1/3 ring of chorizo, cut into thick quarter moons Juice of half a large lemon Handful fresh parsley, around 6 stems, plucked and finely chopped 2 tbsp capers, drained ~60g grated Parmesan/gran padano Method Bring a pot of heavily salted water to the boil and add the pasta, cooking until al-dente (roughly 8 minutes) Meanwhile in a large frying pan, fry the chorizo in a small bit of olive oil until it gives up its oil and becomes crispy Lower the heat and add the capers and fry for a minute, stirring frequently." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chorizo_linguine/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 people’s worth linguine, ~120g? 1/3 ring of chorizo, cut into thick quarter moons Juice of half a large lemon Handful fresh parsley, around 6 stems, plucked and finely chopped 2 tbsp capers, drained ~60g grated Parmesan/gran padano  Method  Bring a pot of heavily salted water to the boil and add the pasta, cooking until al-dente (roughly 8 minutes) Meanwhile in a large frying pan, fry the chorizo in a small bit of olive oil until it gives up its oil and becomes crispy Lower the heat and add the capers and fry for a minute, stirring frequently." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 2 people’s worth linguine, ~120g? 1/3 ring of chorizo, cut into thick quarter moons Juice of half a large lemon Handful fresh parsley, around 6 stems, plucked and finely chopped 2 tbsp capers, drained ~60g grated Parmesan/gran padano Method Bring a pot of heavily salted water to the boil and add the pasta, cooking until al-dente (roughly 8 minutes) Meanwhile in a large frying pan, fry the chorizo in a small bit of olive oil until it gives up its oil and becomes crispy Lower the heat and add the capers and fry for a minute, stirring frequently." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
