--- a/recipes/index.html
+++ b/recipes/index.html
@@ -14,7 +14,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Recipes | CompSoc Cookbook</title>
     <meta property="og:title" content="Recipes" />
@@ -562,6 +562,6 @@
 
 
     
-    <script async src="https://cookbook.comp-soc.com/js/search.min.6fad815d9d05eac0f32270fa99b92a392aa1f1ba063673d50a7dc07b9b390b8f.js" integrity="sha256-b62BXZ0F6sDzInD6mbkqOSqh8boGNnPVCn3Ae5s5C48="></script>
+    <script async src="https://cookbook.comp-soc.com/js/search.min.d3e2be4f5cd2b71754f57cfe5855de2122a00b4c797d0624f151bc93ee1a6fcf.js" integrity="sha256-0&#43;K&#43;T1zStxdU9Xz&#43;WFXeISKgC0x5fQYk8VG8k&#43;4ab88="></script>
   </body>
 </html>
