--- a/recipes/pierogi/index.html
+++ b/recipes/pierogi/index.html
@@ -15,14 +15,14 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Pierogi | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Pierogi" />
-    <meta property="og:description" content="Difficulty: 2-hard • Meal: main_courses • Dough Ingredients  0.5kg plain flour 1 large eggs 1 glass of lukewarm water 1 tbsp of oil Pinch of salt  Method To make the dough:
- Mix flour and salt in a bowl/on a kneading board (as for pasta). Make a well in the centre and add the eggs and oil into it. Mix together, slowly adding water, until it forms a smooth and non-sticky dough. Leave to rest, covered by a clean tea towel or cling film, for 30mins." />
+    <meta property="og:description" content="Difficulty: 2-hard • Meal: main_courses • Dough Ingredients 0.5kg plain flour 1 large eggs 1 glass of lukewarm water 1 tbsp of oil Pinch of salt Method To make the dough:
+Mix flour and salt in a bowl/on a kneading board (as for pasta). Make a well in the centre and add the eggs and oil into it. Mix together, slowly adding water, until it forms a smooth and non-sticky dough. Leave to rest, covered by a clean tea towel or cling film, for 30mins." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -30,8 +30,8 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/pierogi/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 2-hard • Meal: main_courses • Dough Ingredients  0.5kg plain flour 1 large eggs 1 glass of lukewarm water 1 tbsp of oil Pinch of salt  Method To make the dough:
- Mix flour and salt in a bowl/on a kneading board (as for pasta). Make a well in the centre and add the eggs and oil into it. Mix together, slowly adding water, until it forms a smooth and non-sticky dough. Leave to rest, covered by a clean tea towel or cling film, for 30mins." />
+    <meta property="og:image:alt" content="Difficulty: 2-hard • Meal: main_courses • Dough Ingredients 0.5kg plain flour 1 large eggs 1 glass of lukewarm water 1 tbsp of oil Pinch of salt Method To make the dough:
+Mix flour and salt in a bowl/on a kneading board (as for pasta). Make a well in the centre and add the eggs and oil into it. Mix together, slowly adding water, until it forms a smooth and non-sticky dough. Leave to rest, covered by a clean tea towel or cling film, for 30mins." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
