--- a/recipes/pizza-base/index.html
+++ b/recipes/pizza-base/index.html
@@ -15,14 +15,14 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Fool-proof Pizza Base | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Fool-proof Pizza Base" />
     <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Your friends and family are going to ask you whether Gordon Ramsay assisted.
-As seen on https://github.com/elenalape/pizza Ingredients:  1 large cup/2 normal cups all-purpose flour 1/2 cup warm water 1 tsp dry yeast 0.75 tsp salt 1/2 tsp sugar 1 tbsp olive oil Optional: garlic powder  Method:  Add a small amount of warm (not hot, you&rsquo;ll kill the yeast!) water into a mug and mix with yeast and sugar until both dissolve." />
+As seen on https://github.com/elenalape/pizza Ingredients: 1 large cup/2 normal cups all-purpose flour 1/2 cup warm water 1 tsp dry yeast 0.75 tsp salt 1/2 tsp sugar 1 tbsp olive oil Optional: garlic powder Method: Add a small amount of warm (not hot, you&rsquo;ll kill the yeast!) water into a mug and mix with yeast and sugar until both dissolve." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -31,7 +31,7 @@ As seen on https://github.com/elenalape/pizza Ingredients:  1 large cup/2 normal
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/pizza-base/thumbnail.png" />
     <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Your friends and family are going to ask you whether Gordon Ramsay assisted.
-As seen on https://github.com/elenalape/pizza Ingredients:  1 large cup/2 normal cups all-purpose flour 1/2 cup warm water 1 tsp dry yeast 0.75 tsp salt 1/2 tsp sugar 1 tbsp olive oil Optional: garlic powder  Method:  Add a small amount of warm (not hot, you&rsquo;ll kill the yeast!) water into a mug and mix with yeast and sugar until both dissolve." />
+As seen on https://github.com/elenalape/pizza Ingredients: 1 large cup/2 normal cups all-purpose flour 1/2 cup warm water 1 tsp dry yeast 0.75 tsp salt 1/2 tsp sugar 1 tbsp olive oil Optional: garlic powder Method: Add a small amount of warm (not hot, you&rsquo;ll kill the yeast!) water into a mug and mix with yeast and sugar until both dissolve." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
