--- a/recipes/sausage-casserole/index.html
+++ b/recipes/sausage-casserole/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Sausage Casserole | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Sausage Casserole" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  12 sausages 6 rashers rindless streaky bacon, cut into 2.5cm/1in lengths 2 medium onions, thinly sliced 2 garlic cloves, crushed 1 tsp hot chilli powder or smoked paprika 400g tin chopped tomatoes 300ml chicken stock 2 tbsp tomato purée 1 tbsp Worcestershire sauce 1 tbsp dark brown muscovado sugar 1 tsp dried mixed herbs 2 bay leaves 3–4 sprigs of fresh thyme 100ml red or white wine (optional, but encouraged) 400g tin butter beans or mixed beans salt and freshly ground black pepper  Method  Heat a tablespoon of the oil in a large non-stick frying pan and fry the sausages gently for 10 minutes, turning every now and then until nicely browned all over." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 12 sausages 6 rashers rindless streaky bacon, cut into 2.5cm/1in lengths 2 medium onions, thinly sliced 2 garlic cloves, crushed 1 tsp hot chilli powder or smoked paprika 400g tin chopped tomatoes 300ml chicken stock 2 tbsp tomato purée 1 tbsp Worcestershire sauce 1 tbsp dark brown muscovado sugar 1 tsp dried mixed herbs 2 bay leaves 3–4 sprigs of fresh thyme 100ml red or white wine (optional, but encouraged) 400g tin butter beans or mixed beans salt and freshly ground black pepper Method Heat a tablespoon of the oil in a large non-stick frying pan and fry the sausages gently for 10 minutes, turning every now and then until nicely browned all over." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/sausage-casserole/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  12 sausages 6 rashers rindless streaky bacon, cut into 2.5cm/1in lengths 2 medium onions, thinly sliced 2 garlic cloves, crushed 1 tsp hot chilli powder or smoked paprika 400g tin chopped tomatoes 300ml chicken stock 2 tbsp tomato purée 1 tbsp Worcestershire sauce 1 tbsp dark brown muscovado sugar 1 tsp dried mixed herbs 2 bay leaves 3–4 sprigs of fresh thyme 100ml red or white wine (optional, but encouraged) 400g tin butter beans or mixed beans salt and freshly ground black pepper  Method  Heat a tablespoon of the oil in a large non-stick frying pan and fry the sausages gently for 10 minutes, turning every now and then until nicely browned all over." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 12 sausages 6 rashers rindless streaky bacon, cut into 2.5cm/1in lengths 2 medium onions, thinly sliced 2 garlic cloves, crushed 1 tsp hot chilli powder or smoked paprika 400g tin chopped tomatoes 300ml chicken stock 2 tbsp tomato purée 1 tbsp Worcestershire sauce 1 tbsp dark brown muscovado sugar 1 tsp dried mixed herbs 2 bay leaves 3–4 sprigs of fresh thyme 100ml red or white wine (optional, but encouraged) 400g tin butter beans or mixed beans salt and freshly ground black pepper Method Heat a tablespoon of the oil in a large non-stick frying pan and fry the sausages gently for 10 minutes, turning every now and then until nicely browned all over." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
