--- a/recipes/baked-sausage-with-sweet-potato-and-fennel/index.html
+++ b/recipes/baked-sausage-with-sweet-potato-and-fennel/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Baked Sausage With Sweet Potato And Fennel | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Baked Sausage With Sweet Potato And Fennel" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  500g sweet potatoes (approx. 2 large ones), peeled 1 healthy-sized fennel bulb 3 garlic cloves, peeled and sliced 1 tsp celery seeds 1 tbsp dark brown sugar 3 tbsp olive oil 8 solid, good-quality sausages 8 smoked back bacon rashers 1 tbsp plain flour 100ml apple juice 50ml dry white wine (rough measurement) 2 tbsp balsamic vinegar 1 or 2 sprigs of thyme or fennel fronds if you can find them Salt and pepper  Method  Preheat the oven to 200C." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 500g sweet potatoes (approx. 2 large ones), peeled 1 healthy-sized fennel bulb 3 garlic cloves, peeled and sliced 1 tsp celery seeds 1 tbsp dark brown sugar 3 tbsp olive oil 8 solid, good-quality sausages 8 smoked back bacon rashers 1 tbsp plain flour 100ml apple juice 50ml dry white wine (rough measurement) 2 tbsp balsamic vinegar 1 or 2 sprigs of thyme or fennel fronds if you can find them Salt and pepper Method Preheat the oven to 200C." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/baked-sausage-with-sweet-potato-and-fennel/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  500g sweet potatoes (approx. 2 large ones), peeled 1 healthy-sized fennel bulb 3 garlic cloves, peeled and sliced 1 tsp celery seeds 1 tbsp dark brown sugar 3 tbsp olive oil 8 solid, good-quality sausages 8 smoked back bacon rashers 1 tbsp plain flour 100ml apple juice 50ml dry white wine (rough measurement) 2 tbsp balsamic vinegar 1 or 2 sprigs of thyme or fennel fronds if you can find them Salt and pepper  Method  Preheat the oven to 200C." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 500g sweet potatoes (approx. 2 large ones), peeled 1 healthy-sized fennel bulb 3 garlic cloves, peeled and sliced 1 tsp celery seeds 1 tbsp dark brown sugar 3 tbsp olive oil 8 solid, good-quality sausages 8 smoked back bacon rashers 1 tbsp plain flour 100ml apple juice 50ml dry white wine (rough measurement) 2 tbsp balsamic vinegar 1 or 2 sprigs of thyme or fennel fronds if you can find them Salt and pepper Method Preheat the oven to 200C." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
