--- a/recipes/best-thai-green-curry/index.html
+++ b/recipes/best-thai-green-curry/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Thai Green Curry | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Thai Green Curry" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  2 tbsp Thai green curry paste (adjust for spice tolerance) 1 tbsp soft dark brown sugar 1-2 thick stalks lemongrass, fat ends bashed with a rolling pin (optional) 750g chicken, cut into chunks 6-8 kaffir lime leaves, torn into pieces 400ml coconut milk (have a spare in case you need to take the spice out) Good shake of Thai fish sauce or light soy sauce Small handful of coriander, roughly chopped 1/2 - 1 lime, juice only  Method  Heat the oil in a wok or large frying pan." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 2 tbsp Thai green curry paste (adjust for spice tolerance) 1 tbsp soft dark brown sugar 1-2 thick stalks lemongrass, fat ends bashed with a rolling pin (optional) 750g chicken, cut into chunks 6-8 kaffir lime leaves, torn into pieces 400ml coconut milk (have a spare in case you need to take the spice out) Good shake of Thai fish sauce or light soy sauce Small handful of coriander, roughly chopped 1/2 - 1 lime, juice only Method Heat the oil in a wok or large frying pan." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/best-thai-green-curry/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  2 tbsp Thai green curry paste (adjust for spice tolerance) 1 tbsp soft dark brown sugar 1-2 thick stalks lemongrass, fat ends bashed with a rolling pin (optional) 750g chicken, cut into chunks 6-8 kaffir lime leaves, torn into pieces 400ml coconut milk (have a spare in case you need to take the spice out) Good shake of Thai fish sauce or light soy sauce Small handful of coriander, roughly chopped 1/2 - 1 lime, juice only  Method  Heat the oil in a wok or large frying pan." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 2 tbsp Thai green curry paste (adjust for spice tolerance) 1 tbsp soft dark brown sugar 1-2 thick stalks lemongrass, fat ends bashed with a rolling pin (optional) 750g chicken, cut into chunks 6-8 kaffir lime leaves, torn into pieces 400ml coconut milk (have a spare in case you need to take the spice out) Good shake of Thai fish sauce or light soy sauce Small handful of coriander, roughly chopped 1/2 - 1 lime, juice only Method Heat the oil in a wok or large frying pan." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
