--- a/recipes/brazilian-coconut-chicken/index.html
+++ b/recipes/brazilian-coconut-chicken/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Brazilian Coconut Chicken | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Brazilian Coconut Chicken" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1 tsp ground cumin 1 tsp ground cayenne pepper 1 tsp ground turmeric 1 tsp ground coriander 4 chicken breasts, chopped into cubes 1 onion, chopped 1 tbsp minced fresh ginger 2 green chillies, seeded and chopped 2 cloves garlic, minced 3 tomatoes, seeded and chopped 1 (400ml) tin light coconut milk  Method  In a mixing bowl, combine the spices and place the chicken in, seasoning with salt and pepper." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 1 tsp ground cumin 1 tsp ground cayenne pepper 1 tsp ground turmeric 1 tsp ground coriander 4 chicken breasts, chopped into cubes 1 onion, chopped 1 tbsp minced fresh ginger 2 green chillies, seeded and chopped 2 cloves garlic, minced 3 tomatoes, seeded and chopped 1 (400ml) tin light coconut milk Method In a mixing bowl, combine the spices and place the chicken in, seasoning with salt and pepper." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/brazilian-coconut-chicken/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1 tsp ground cumin 1 tsp ground cayenne pepper 1 tsp ground turmeric 1 tsp ground coriander 4 chicken breasts, chopped into cubes 1 onion, chopped 1 tbsp minced fresh ginger 2 green chillies, seeded and chopped 2 cloves garlic, minced 3 tomatoes, seeded and chopped 1 (400ml) tin light coconut milk  Method  In a mixing bowl, combine the spices and place the chicken in, seasoning with salt and pepper." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 1 tsp ground cumin 1 tsp ground cayenne pepper 1 tsp ground turmeric 1 tsp ground coriander 4 chicken breasts, chopped into cubes 1 onion, chopped 1 tbsp minced fresh ginger 2 green chillies, seeded and chopped 2 cloves garlic, minced 3 tomatoes, seeded and chopped 1 (400ml) tin light coconut milk Method In a mixing bowl, combine the spices and place the chicken in, seasoning with salt and pepper." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
