--- a/recipes/chicken-and-lentil-dahl/index.html
+++ b/recipes/chicken-and-lentil-dahl/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chicken and Lentil Dahl | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Chicken and Lentil Dahl" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  215g red lentils 500g chicken breasts, cut in half 3/4 teaspoon salt, or to taste 1/2 teaspoon turmeric 2 tablespoons grated fresh ginger 1 teaspoon ground ginger 3 teaspoons cumin seeds 5 black cardamom pods or 10 green cardamom pods, lightly crushed 2 tablespoons olive oil 1 small onion, thinly sliced 6 garlic cloves, finely chopped 2-6 green chillies, chopped (based on preference)  Method  Place the lentils, chicken, salt, turmeric, fresh ginger, ground ginger, 2 teaspoons of the cumin seeds and the cardamom pods in a deep saucepan." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 215g red lentils 500g chicken breasts, cut in half 3/4 teaspoon salt, or to taste 1/2 teaspoon turmeric 2 tablespoons grated fresh ginger 1 teaspoon ground ginger 3 teaspoons cumin seeds 5 black cardamom pods or 10 green cardamom pods, lightly crushed 2 tablespoons olive oil 1 small onion, thinly sliced 6 garlic cloves, finely chopped 2-6 green chillies, chopped (based on preference) Method Place the lentils, chicken, salt, turmeric, fresh ginger, ground ginger, 2 teaspoons of the cumin seeds and the cardamom pods in a deep saucepan." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chicken-and-lentil-dahl/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  215g red lentils 500g chicken breasts, cut in half 3/4 teaspoon salt, or to taste 1/2 teaspoon turmeric 2 tablespoons grated fresh ginger 1 teaspoon ground ginger 3 teaspoons cumin seeds 5 black cardamom pods or 10 green cardamom pods, lightly crushed 2 tablespoons olive oil 1 small onion, thinly sliced 6 garlic cloves, finely chopped 2-6 green chillies, chopped (based on preference)  Method  Place the lentils, chicken, salt, turmeric, fresh ginger, ground ginger, 2 teaspoons of the cumin seeds and the cardamom pods in a deep saucepan." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 215g red lentils 500g chicken breasts, cut in half 3/4 teaspoon salt, or to taste 1/2 teaspoon turmeric 2 tablespoons grated fresh ginger 1 teaspoon ground ginger 3 teaspoons cumin seeds 5 black cardamom pods or 10 green cardamom pods, lightly crushed 2 tablespoons olive oil 1 small onion, thinly sliced 6 garlic cloves, finely chopped 2-6 green chillies, chopped (based on preference) Method Place the lentils, chicken, salt, turmeric, fresh ginger, ground ginger, 2 teaspoons of the cumin seeds and the cardamom pods in a deep saucepan." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
