--- a/recipes/chicken-satay/index.html
+++ b/recipes/chicken-satay/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chicken Satay | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Chicken Satay" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  3 tbsp crunchy peanut butter 3 tbsp sweet chilli sauce 2 tbsp soy sauce 300g noodles thumb-sized bit of fresh ginger peeled and chopped 1tbsp oil 300g stir fry veg (mange tout, sugar snap peas, tenderstem broccoli, bean sprouts etc.) handful of cooked chicken handful basil 25g roasted peanuts (optional)  Method  Mix PB, chilli sauce, soy sauce and 100ml boiling water in a bowl to make the paste." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 3 tbsp crunchy peanut butter 3 tbsp sweet chilli sauce 2 tbsp soy sauce 300g noodles thumb-sized bit of fresh ginger peeled and chopped 1tbsp oil 300g stir fry veg (mange tout, sugar snap peas, tenderstem broccoli, bean sprouts etc.) handful of cooked chicken handful basil 25g roasted peanuts (optional) Method Mix PB, chilli sauce, soy sauce and 100ml boiling water in a bowl to make the paste. Cook noodles according to packet instructions." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chicken-satay/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  3 tbsp crunchy peanut butter 3 tbsp sweet chilli sauce 2 tbsp soy sauce 300g noodles thumb-sized bit of fresh ginger peeled and chopped 1tbsp oil 300g stir fry veg (mange tout, sugar snap peas, tenderstem broccoli, bean sprouts etc.) handful of cooked chicken handful basil 25g roasted peanuts (optional)  Method  Mix PB, chilli sauce, soy sauce and 100ml boiling water in a bowl to make the paste." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 3 tbsp crunchy peanut butter 3 tbsp sweet chilli sauce 2 tbsp soy sauce 300g noodles thumb-sized bit of fresh ginger peeled and chopped 1tbsp oil 300g stir fry veg (mange tout, sugar snap peas, tenderstem broccoli, bean sprouts etc.) handful of cooked chicken handful basil 25g roasted peanuts (optional) Method Mix PB, chilli sauce, soy sauce and 100ml boiling water in a bowl to make the paste. Cook noodles according to packet instructions." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
