--- a/recipes/chickpea-curry/index.html
+++ b/recipes/chickpea-curry/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chickpea Curry | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Chickpea Curry" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1 tbsp oil 1 onion, finely chopped 2 garlic cloves, thinly sliced 1 green pepper, cored, deseeded and chopped 150g red lentils, rinsed 2 tsp garam masala 1 tsp cumin seeds 1/2 tsp hot chilli powder 1 tsp ground coriander 2 tbsp tomato purée 700ml hot vegetable stock 400g tin chickpeas, drained 2 tbsp chopped coriander, to garnish salt and freshly ground black pepper  Method  Heat the oil in a heavy-based saucepan over a medium heat, add the onion, garlic and green pepper and fry gently for 10-12 minutes or until softened and beginning to colour." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 1 tbsp oil 1 onion, finely chopped 2 garlic cloves, thinly sliced 1 green pepper, cored, deseeded and chopped 150g red lentils, rinsed 2 tsp garam masala 1 tsp cumin seeds 1/2 tsp hot chilli powder 1 tsp ground coriander 2 tbsp tomato purée 700ml hot vegetable stock 400g tin chickpeas, drained 2 tbsp chopped coriander, to garnish salt and freshly ground black pepper Method Heat the oil in a heavy-based saucepan over a medium heat, add the onion, garlic and green pepper and fry gently for 10-12 minutes or until softened and beginning to colour." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chickpea-curry/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1 tbsp oil 1 onion, finely chopped 2 garlic cloves, thinly sliced 1 green pepper, cored, deseeded and chopped 150g red lentils, rinsed 2 tsp garam masala 1 tsp cumin seeds 1/2 tsp hot chilli powder 1 tsp ground coriander 2 tbsp tomato purée 700ml hot vegetable stock 400g tin chickpeas, drained 2 tbsp chopped coriander, to garnish salt and freshly ground black pepper  Method  Heat the oil in a heavy-based saucepan over a medium heat, add the onion, garlic and green pepper and fry gently for 10-12 minutes or until softened and beginning to colour." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 1 tbsp oil 1 onion, finely chopped 2 garlic cloves, thinly sliced 1 green pepper, cored, deseeded and chopped 150g red lentils, rinsed 2 tsp garam masala 1 tsp cumin seeds 1/2 tsp hot chilli powder 1 tsp ground coriander 2 tbsp tomato purée 700ml hot vegetable stock 400g tin chickpeas, drained 2 tbsp chopped coriander, to garnish salt and freshly ground black pepper Method Heat the oil in a heavy-based saucepan over a medium heat, add the onion, garlic and green pepper and fry gently for 10-12 minutes or until softened and beginning to colour." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
