--- a/recipes/chickpea_spinach_and_egg_curry/index.html
+++ b/recipes/chickpea_spinach_and_egg_curry/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chickpea, spinach and egg curry | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Chickpea, spinach and egg curry" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 eggs 2 tsp cumin seeds 1 tsp black mustard seeds 2 tbsp medium curry powder 1 tsp garlic granules 1 tsp ground ginger 400g tin chopped tomatoes 400g tin chickpeas, drained &amp; rinsed 1 tbsp lemon juice 100ml boiling water 180g baby spinach leaves Fresh coriander, to garnish  Method  Boil the eggs for 6-8 minutes. Shock in an ice bath once done to make peeling easier." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 2 eggs 2 tsp cumin seeds 1 tsp black mustard seeds 2 tbsp medium curry powder 1 tsp garlic granules 1 tsp ground ginger 400g tin chopped tomatoes 400g tin chickpeas, drained &amp; rinsed 1 tbsp lemon juice 100ml boiling water 180g baby spinach leaves Fresh coriander, to garnish Method Boil the eggs for 6-8 minutes. Shock in an ice bath once done to make peeling easier. Meanwhile, heat some oil in a wide frying pan over a low heat." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chickpea_spinach_and_egg_curry/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 eggs 2 tsp cumin seeds 1 tsp black mustard seeds 2 tbsp medium curry powder 1 tsp garlic granules 1 tsp ground ginger 400g tin chopped tomatoes 400g tin chickpeas, drained &amp; rinsed 1 tbsp lemon juice 100ml boiling water 180g baby spinach leaves Fresh coriander, to garnish  Method  Boil the eggs for 6-8 minutes. Shock in an ice bath once done to make peeling easier." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 2 eggs 2 tsp cumin seeds 1 tsp black mustard seeds 2 tbsp medium curry powder 1 tsp garlic granules 1 tsp ground ginger 400g tin chopped tomatoes 400g tin chickpeas, drained &amp; rinsed 1 tbsp lemon juice 100ml boiling water 180g baby spinach leaves Fresh coriander, to garnish Method Boil the eggs for 6-8 minutes. Shock in an ice bath once done to make peeling easier. Meanwhile, heat some oil in a wide frying pan over a low heat." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
