--- a/recipes/chocolate-cupcakes/index.html
+++ b/recipes/chocolate-cupcakes/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chocolate cupcakes | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
@@ -23,8 +23,8 @@
     <meta property="og:title" content="Chocolate cupcakes" />
     <meta property="og:description" content="Difficulty: 1-medium • Meal: desserts • This recipe is adapted from a vegetarian cookbook, and it&rsquo;s quickly become a favorite for its delicious frosting and fluffy base!
 Ingredients For the cupcake
- 175g plain or all-purpose flour 2tsp cocoa powder 1.5tsp baking powder 140g sugar 25g ground almonds 2 large eggs 175g full-fat yogurt 2-3 drops vanilla extract 25g butter, melted 2tsp rapeseed oil  For the frosting
- 25g dark chocolate, finely chopped 1tbsp dark chocolate, grated for decorating 25g butter, softened 50g icing (powdered) sugar 1tbsp cocoa powder 1tsp semi-skimmed milk 100g low-fat curd cheese." />
+175g plain or all-purpose flour 2tsp cocoa powder 1.5tsp baking powder 140g sugar 25g ground almonds 2 large eggs 175g full-fat yogurt 2-3 drops vanilla extract 25g butter, melted 2tsp rapeseed oil For the frosting
+25g dark chocolate, finely chopped 1tbsp dark chocolate, grated for decorating 25g butter, softened 50g icing (powdered) sugar 1tbsp cocoa powder 1tsp semi-skimmed milk 100g low-fat curd cheese." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -34,8 +34,8 @@ Ingredients For the cupcake
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chocolate-cupcakes/thumbnail.png" />
     <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: desserts • This recipe is adapted from a vegetarian cookbook, and it&rsquo;s quickly become a favorite for its delicious frosting and fluffy base!
 Ingredients For the cupcake
- 175g plain or all-purpose flour 2tsp cocoa powder 1.5tsp baking powder 140g sugar 25g ground almonds 2 large eggs 175g full-fat yogurt 2-3 drops vanilla extract 25g butter, melted 2tsp rapeseed oil  For the frosting
- 25g dark chocolate, finely chopped 1tbsp dark chocolate, grated for decorating 25g butter, softened 50g icing (powdered) sugar 1tbsp cocoa powder 1tsp semi-skimmed milk 100g low-fat curd cheese." />
+175g plain or all-purpose flour 2tsp cocoa powder 1.5tsp baking powder 140g sugar 25g ground almonds 2 large eggs 175g full-fat yogurt 2-3 drops vanilla extract 25g butter, melted 2tsp rapeseed oil For the frosting
+25g dark chocolate, finely chopped 1tbsp dark chocolate, grated for decorating 25g butter, softened 50g icing (powdered) sugar 1tbsp cocoa powder 1tsp semi-skimmed milk 100g low-fat curd cheese." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
