--- a/recipes/chocolate-roll/index.html
+++ b/recipes/chocolate-roll/index.html
@@ -15,14 +15,14 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chocolate roll | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Chocolate roll" />
     <meta property="og:description" content="Difficulty: 1-medium • Meal: desserts • This no-bake roll with biscuits and cocoa is a Romanian family favorite dessert! Inspired by this recipe with a couple of modifications.
-Ingredients  200g butter biscuits (you can add more to taste - Leibniz type biscuits should work best) 50g cocoa powder 130g butter 100ml milk 125g sugar (either brown or white) 50g dark chocolate (at least 50% cocoa) rum essence (not necessary but it makes the taste much better - any Polish store should have it) vanilla sugar powdered sugar extra filling: nuts, almonds, raisins, cranberries, candied fruit, finely chopped Turkish delight, coconut flakes, or several of these!" />
+Ingredients 200g butter biscuits (you can add more to taste - Leibniz type biscuits should work best) 50g cocoa powder 130g butter 100ml milk 125g sugar (either brown or white) 50g dark chocolate (at least 50% cocoa) rum essence (not necessary but it makes the taste much better - any Polish store should have it) vanilla sugar powdered sugar extra filling: nuts, almonds, raisins, cranberries, candied fruit, finely chopped Turkish delight, coconut flakes, or several of these!" />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -31,7 +31,7 @@ Ingredients  200g butter biscuits (you can add more to taste - Leibniz type bisc
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chocolate-roll/thumbnail.png" />
     <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: desserts • This no-bake roll with biscuits and cocoa is a Romanian family favorite dessert! Inspired by this recipe with a couple of modifications.
-Ingredients  200g butter biscuits (you can add more to taste - Leibniz type biscuits should work best) 50g cocoa powder 130g butter 100ml milk 125g sugar (either brown or white) 50g dark chocolate (at least 50% cocoa) rum essence (not necessary but it makes the taste much better - any Polish store should have it) vanilla sugar powdered sugar extra filling: nuts, almonds, raisins, cranberries, candied fruit, finely chopped Turkish delight, coconut flakes, or several of these!" />
+Ingredients 200g butter biscuits (you can add more to taste - Leibniz type biscuits should work best) 50g cocoa powder 130g butter 100ml milk 125g sugar (either brown or white) 50g dark chocolate (at least 50% cocoa) rum essence (not necessary but it makes the taste much better - any Polish store should have it) vanilla sugar powdered sugar extra filling: nuts, almonds, raisins, cranberries, candied fruit, finely chopped Turkish delight, coconut flakes, or several of these!" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
