--- a/recipes/chorizo-and-pearl-barley-risotto/index.html
+++ b/recipes/chorizo-and-pearl-barley-risotto/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Chorizo and Pearl Barley Risotto | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Chorizo and Pearl Barley Risotto" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  Chorizo ring, sliced into coins 1 onion, finely chopped 2 garlic cloves, finely chopped 1 tsp smoked paprika 300g pearl barley 400g can of chopped tomatoes 1L hot chicken stock 2 stalks of rosemary, leaves chopped and stalks removed  Method  Heat a pan over a medium heat and fry chorizo for about 5 minutes until golden and have released its oil. Remove with a slotted spoon and set aside, covering with tin foil to keep warm (and stop you eating all of them)." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients Chorizo ring, sliced into coins 1 onion, finely chopped 2 garlic cloves, finely chopped 1 tsp smoked paprika 300g pearl barley 400g can of chopped tomatoes 1L hot chicken stock 2 stalks of rosemary, leaves chopped and stalks removed Method Heat a pan over a medium heat and fry chorizo for about 5 minutes until golden and have released its oil. Remove with a slotted spoon and set aside, covering with tin foil to keep warm (and stop you eating all of them)." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/chorizo-and-pearl-barley-risotto/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  Chorizo ring, sliced into coins 1 onion, finely chopped 2 garlic cloves, finely chopped 1 tsp smoked paprika 300g pearl barley 400g can of chopped tomatoes 1L hot chicken stock 2 stalks of rosemary, leaves chopped and stalks removed  Method  Heat a pan over a medium heat and fry chorizo for about 5 minutes until golden and have released its oil. Remove with a slotted spoon and set aside, covering with tin foil to keep warm (and stop you eating all of them)." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients Chorizo ring, sliced into coins 1 onion, finely chopped 2 garlic cloves, finely chopped 1 tsp smoked paprika 300g pearl barley 400g can of chopped tomatoes 1L hot chicken stock 2 stalks of rosemary, leaves chopped and stalks removed Method Heat a pan over a medium heat and fry chorizo for about 5 minutes until golden and have released its oil. Remove with a slotted spoon and set aside, covering with tin foil to keep warm (and stop you eating all of them)." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
