--- a/recipes/courgette-and-mint-soup/index.html
+++ b/recipes/courgette-and-mint-soup/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Courgette &amp; Mint soup | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Courgette &amp; Mint soup" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  knob of butter 1 onion, chopped 1kg courgettes, roughly chopped 1/2 tsp dried mint 1.3L vegetable stock 3-4 sprigs fresh mint Soured cream/yoghurt/single cream, to serve  Method  Heat butter in a large saucepan, add the onion and cooky gently until soft. Add the courgettes and dried mint, and stir well to mix with the onion. Cover and cook over a gentle heat for about 10 mins until the courgettes are softened but not charred." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients knob of butter 1 onion, chopped 1kg courgettes, roughly chopped 1/2 tsp dried mint 1.3L vegetable stock 3-4 sprigs fresh mint Soured cream/yoghurt/single cream, to serve Method Heat butter in a large saucepan, add the onion and cooky gently until soft. Add the courgettes and dried mint, and stir well to mix with the onion. Cover and cook over a gentle heat for about 10 mins until the courgettes are softened but not charred." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/courgette-and-mint-soup/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  knob of butter 1 onion, chopped 1kg courgettes, roughly chopped 1/2 tsp dried mint 1.3L vegetable stock 3-4 sprigs fresh mint Soured cream/yoghurt/single cream, to serve  Method  Heat butter in a large saucepan, add the onion and cooky gently until soft. Add the courgettes and dried mint, and stir well to mix with the onion. Cover and cook over a gentle heat for about 10 mins until the courgettes are softened but not charred." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients knob of butter 1 onion, chopped 1kg courgettes, roughly chopped 1/2 tsp dried mint 1.3L vegetable stock 3-4 sprigs fresh mint Soured cream/yoghurt/single cream, to serve Method Heat butter in a large saucepan, add the onion and cooky gently until soft. Add the courgettes and dried mint, and stir well to mix with the onion. Cover and cook over a gentle heat for about 10 mins until the courgettes are softened but not charred." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
