--- a/recipes/dark_and_dirty_mojito/index.html
+++ b/recipes/dark_and_dirty_mojito/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Dark &amp; Dirty Mojito | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Dark &amp; Dirty Mojito" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: cocktails • Ingredients  2 parts spiced rum 1 part ginger beer 2 part soda 2 part sugar water 1 part lime juice 5-10 mint leaves Ice  Method  Add ice and mint to the glass and bruise mint Add all liquids except lime juice and stir Squeeze in lime juice, add the lime and stir Pack with ice if desired and serve  " />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: cocktails • Ingredients 2 parts spiced rum 1 part ginger beer 2 part soda 2 part sugar water 1 part lime juice 5-10 mint leaves Ice Method Add ice and mint to the glass and bruise mint Add all liquids except lime juice and stir Squeeze in lime juice, add the lime and stir Pack with ice if desired and serve " />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/dark_and_dirty_mojito/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: cocktails • Ingredients  2 parts spiced rum 1 part ginger beer 2 part soda 2 part sugar water 1 part lime juice 5-10 mint leaves Ice  Method  Add ice and mint to the glass and bruise mint Add all liquids except lime juice and stir Squeeze in lime juice, add the lime and stir Pack with ice if desired and serve  " />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: cocktails • Ingredients 2 parts spiced rum 1 part ginger beer 2 part soda 2 part sugar water 1 part lime juice 5-10 mint leaves Ice Method Add ice and mint to the glass and bruise mint Add all liquids except lime juice and stir Squeeze in lime juice, add the lime and stir Pack with ice if desired and serve " />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
