--- a/recipes/harissa-chicken-traybake/index.html
+++ b/recipes/harissa-chicken-traybake/index.html
@@ -15,14 +15,14 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Harissa Chicken Traybake | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Harissa Chicken Traybake" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  3 tbsp harissa 3 tbsp low-fat natural yogurt 4 skinless chicken breasts, slashed 1 small butternut squash, peeled, deseeded and cut into wedges 2 red onions, cut into wedges  (Other vegetables also work, such as shallots, sweet potato(!), peppers, etc)
-Method  Heat oven to 200C/180C fan. Mix 2 tbsp of harissa with the yogurt and rub all over the chicken breasts and set aside to marinate while you start the veg." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 3 tbsp harissa 3 tbsp low-fat natural yogurt 4 skinless chicken breasts, slashed 1 small butternut squash, peeled, deseeded and cut into wedges 2 red onions, cut into wedges (Other vegetables also work, such as shallots, sweet potato(!), peppers, etc)
+Method Heat oven to 200C/180C fan. Mix 2 tbsp of harissa with the yogurt and rub all over the chicken breasts and set aside to marinate while you start the veg." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -30,8 +30,8 @@ Method  Heat oven to 200C/180C fan. Mix 2 tbsp of harissa with the yogurt and ru
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/harissa-chicken-traybake/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  3 tbsp harissa 3 tbsp low-fat natural yogurt 4 skinless chicken breasts, slashed 1 small butternut squash, peeled, deseeded and cut into wedges 2 red onions, cut into wedges  (Other vegetables also work, such as shallots, sweet potato(!), peppers, etc)
-Method  Heat oven to 200C/180C fan. Mix 2 tbsp of harissa with the yogurt and rub all over the chicken breasts and set aside to marinate while you start the veg." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 3 tbsp harissa 3 tbsp low-fat natural yogurt 4 skinless chicken breasts, slashed 1 small butternut squash, peeled, deseeded and cut into wedges 2 red onions, cut into wedges (Other vegetables also work, such as shallots, sweet potato(!), peppers, etc)
+Method Heat oven to 200C/180C fan. Mix 2 tbsp of harissa with the yogurt and rub all over the chicken breasts and set aside to marinate while you start the veg." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
