--- a/recipes/instant-pot-spaghetti-meat-sauce/index.html
+++ b/recipes/instant-pot-spaghetti-meat-sauce/index.html
@@ -15,14 +15,14 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Instant Pot Spaghetti &amp; Meat Sauce | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Instant Pot Spaghetti &amp; Meat Sauce" />
     <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Super duper easy recipe for spaghetti &amp; meat sauce that you can do right in an instant pot.
-Ingredients  8 oz dry pasta (spaghetti works best) 1 tbsp olive oil 500g ground beef Small onion 475ml water 24oz tomato sauce (1 jar, or equiv. homemade) Garlic powder Onion powder Kosher salt Pepper Red pepper flakes Grated parmesan (for serving)  Method  Set your instant pot to Sauté, and once it&rsquo;s hot add the olive oil and minced onion." />
+Ingredients 8 oz dry pasta (spaghetti works best) 1 tbsp olive oil 500g ground beef Small onion 475ml water 24oz tomato sauce (1 jar, or equiv. homemade) Garlic powder Onion powder Kosher salt Pepper Red pepper flakes Grated parmesan (for serving) Method Set your instant pot to Sauté, and once it&rsquo;s hot add the olive oil and minced onion." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -31,7 +31,7 @@ Ingredients  8 oz dry pasta (spaghetti works best) 1 tbsp olive oil 500g ground 
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/instant-pot-spaghetti-meat-sauce/thumbnail.png" />
     <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Super duper easy recipe for spaghetti &amp; meat sauce that you can do right in an instant pot.
-Ingredients  8 oz dry pasta (spaghetti works best) 1 tbsp olive oil 500g ground beef Small onion 475ml water 24oz tomato sauce (1 jar, or equiv. homemade) Garlic powder Onion powder Kosher salt Pepper Red pepper flakes Grated parmesan (for serving)  Method  Set your instant pot to Sauté, and once it&rsquo;s hot add the olive oil and minced onion." />
+Ingredients 8 oz dry pasta (spaghetti works best) 1 tbsp olive oil 500g ground beef Small onion 475ml water 24oz tomato sauce (1 jar, or equiv. homemade) Garlic powder Onion powder Kosher salt Pepper Red pepper flakes Grated parmesan (for serving) Method Set your instant pot to Sauté, and once it&rsquo;s hot add the olive oil and minced onion." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
