--- a/recipes/lamb-koftas/index.html
+++ b/recipes/lamb-koftas/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Lamb Koftas | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Lamb Koftas" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  500g lamb mince 2 tsp ground cumin Chilli flakes, to taste 2 tbsp chopped parsley leaves 2 tbsp chopped mint leaves Salt Pepper  Method  Mix together all ingredients until well blended. Roll the lamb mixture into pieces the size of golf balls and flatten them into patties about 1 cm thick. Place on a plate drizzled with a little olive oil, and drizzle the tops of the patties with more oil, ready for cooking." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 500g lamb mince 2 tsp ground cumin Chilli flakes, to taste 2 tbsp chopped parsley leaves 2 tbsp chopped mint leaves Salt Pepper Method Mix together all ingredients until well blended. Roll the lamb mixture into pieces the size of golf balls and flatten them into patties about 1 cm thick. Place on a plate drizzled with a little olive oil, and drizzle the tops of the patties with more oil, ready for cooking." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/lamb-koftas/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  500g lamb mince 2 tsp ground cumin Chilli flakes, to taste 2 tbsp chopped parsley leaves 2 tbsp chopped mint leaves Salt Pepper  Method  Mix together all ingredients until well blended. Roll the lamb mixture into pieces the size of golf balls and flatten them into patties about 1 cm thick. Place on a plate drizzled with a little olive oil, and drizzle the tops of the patties with more oil, ready for cooking." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 500g lamb mince 2 tsp ground cumin Chilli flakes, to taste 2 tbsp chopped parsley leaves 2 tbsp chopped mint leaves Salt Pepper Method Mix together all ingredients until well blended. Roll the lamb mixture into pieces the size of golf balls and flatten them into patties about 1 cm thick. Place on a plate drizzled with a little olive oil, and drizzle the tops of the patties with more oil, ready for cooking." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
