--- a/recipes/pink-lady/index.html
+++ b/recipes/pink-lady/index.html
@@ -15,14 +15,14 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Pink Lady | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Pink Lady" />
     <meta property="og:description" content="Difficulty: 0-easy • Meal: cocktails • Courtesy of this old cocktail shaker I found in a charity shop
-Ingredients  3-4 Ice Cubes (Crushed) 1 Tsp Grenadine 1 Measure Gin 1 Egg White A Sliver of Orange Peel (Optional)  Method  Add ice to shaker Pour in all liquids &amp; egg whites Shake until most of the ice has melted Add the orange peel in the glass for a bit of pizzaz (pizzaz optional) Crunk  " />
+Ingredients 3-4 Ice Cubes (Crushed) 1 Tsp Grenadine 1 Measure Gin 1 Egg White A Sliver of Orange Peel (Optional) Method Add ice to shaker Pour in all liquids &amp; egg whites Shake until most of the ice has melted Add the orange peel in the glass for a bit of pizzaz (pizzaz optional) Crunk " />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -31,7 +31,7 @@ Ingredients  3-4 Ice Cubes (Crushed) 1 Tsp Grenadine 1 Measure Gin 1 Egg White A
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/pink-lady/thumbnail.png" />
     <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: cocktails • Courtesy of this old cocktail shaker I found in a charity shop
-Ingredients  3-4 Ice Cubes (Crushed) 1 Tsp Grenadine 1 Measure Gin 1 Egg White A Sliver of Orange Peel (Optional)  Method  Add ice to shaker Pour in all liquids &amp; egg whites Shake until most of the ice has melted Add the orange peel in the glass for a bit of pizzaz (pizzaz optional) Crunk  " />
+Ingredients 3-4 Ice Cubes (Crushed) 1 Tsp Grenadine 1 Measure Gin 1 Egg White A Sliver of Orange Peel (Optional) Method Add ice to shaker Pour in all liquids &amp; egg whites Shake until most of the ice has melted Add the orange peel in the glass for a bit of pizzaz (pizzaz optional) Crunk " />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
