--- a/recipes/pork-and-pistachio-meatloaf/index.html
+++ b/recipes/pork-and-pistachio-meatloaf/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Pork &amp; Pistachio Meatloaf | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Pork &amp; Pistachio Meatloaf" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  100g white breadcrumbs 150g pistachio nuts, roughly chopped 1kg pork mince 50g pickled gherkins, chopped into pieces 1 tbsp English mustard 3 garlic cloves, peeled and crushed 2 medium free range eggs, beaten Salt and pepper  Method  Preheat the oven to 180C fan. Line the base of a 900g non-stick loaf tin with grease proof paper. Combine all the ingredients in a large bowl. Get your hands involved to really squidge everything together." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 100g white breadcrumbs 150g pistachio nuts, roughly chopped 1kg pork mince 50g pickled gherkins, chopped into pieces 1 tbsp English mustard 3 garlic cloves, peeled and crushed 2 medium free range eggs, beaten Salt and pepper Method Preheat the oven to 180C fan. Line the base of a 900g non-stick loaf tin with grease proof paper. Combine all the ingredients in a large bowl. Get your hands involved to really squidge everything together." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/pork-and-pistachio-meatloaf/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  100g white breadcrumbs 150g pistachio nuts, roughly chopped 1kg pork mince 50g pickled gherkins, chopped into pieces 1 tbsp English mustard 3 garlic cloves, peeled and crushed 2 medium free range eggs, beaten Salt and pepper  Method  Preheat the oven to 180C fan. Line the base of a 900g non-stick loaf tin with grease proof paper. Combine all the ingredients in a large bowl. Get your hands involved to really squidge everything together." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 100g white breadcrumbs 150g pistachio nuts, roughly chopped 1kg pork mince 50g pickled gherkins, chopped into pieces 1 tbsp English mustard 3 garlic cloves, peeled and crushed 2 medium free range eggs, beaten Salt and pepper Method Preheat the oven to 180C fan. Line the base of a 900g non-stick loaf tin with grease proof paper. Combine all the ingredients in a large bowl. Get your hands involved to really squidge everything together." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
