--- a/recipes/sausage-apple-and-leek-pie/index.html
+++ b/recipes/sausage-apple-and-leek-pie/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Sausage, Apple and Leek Pie | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Sausage, Apple and Leek Pie" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  8 sausages 1 apple, peeled and sliced into small bits 3 leeks, sliced (depending on size) 1 tbsp plain flour 1 tbsp grainy mustard 300ml stock 375g ready-rolled shortcut pastry 1 egg, beaten  Method  Preheat oven to 200C/Fan 180C. Fry sausages in large frying pan until brown on all sides. Remove from the frying pan and set to one side. Fry the leeks for 8-10 minutes until softened, then add the apple and fry for 1 minute." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 8 sausages 1 apple, peeled and sliced into small bits 3 leeks, sliced (depending on size) 1 tbsp plain flour 1 tbsp grainy mustard 300ml stock 375g ready-rolled shortcut pastry 1 egg, beaten Method Preheat oven to 200C/Fan 180C. Fry sausages in large frying pan until brown on all sides. Remove from the frying pan and set to one side. Fry the leeks for 8-10 minutes until softened, then add the apple and fry for 1 minute." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/sausage-apple-and-leek-pie/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  8 sausages 1 apple, peeled and sliced into small bits 3 leeks, sliced (depending on size) 1 tbsp plain flour 1 tbsp grainy mustard 300ml stock 375g ready-rolled shortcut pastry 1 egg, beaten  Method  Preheat oven to 200C/Fan 180C. Fry sausages in large frying pan until brown on all sides. Remove from the frying pan and set to one side. Fry the leeks for 8-10 minutes until softened, then add the apple and fry for 1 minute." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 8 sausages 1 apple, peeled and sliced into small bits 3 leeks, sliced (depending on size) 1 tbsp plain flour 1 tbsp grainy mustard 300ml stock 375g ready-rolled shortcut pastry 1 egg, beaten Method Preheat oven to 200C/Fan 180C. Fry sausages in large frying pan until brown on all sides. Remove from the frying pan and set to one side. Fry the leeks for 8-10 minutes until softened, then add the apple and fry for 1 minute." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
