--- a/recipes/slow-cooker-honey-sriracha-chicken/index.html
+++ b/recipes/slow-cooker-honey-sriracha-chicken/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Slow Cooker Honey Sriracha Chicken | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Slow Cooker Honey Sriracha Chicken" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  6 chicken thighs, bone-in &amp; skin on 4 tbsp ketchup (spicy, Polish ketchup recommended) 4 tbsp soy sauce 4 tbsp honey 1 lime, juiced 2 tbsp Sriracha 3 cloves garlic, minced  Method  Heat oil in large frying pan over high heat. Add chicken and sear until golden brown on both sides, 2-3 minutes on each side. Transfer chicken to slow cooker. In a bowl, combine ketchup, soy sauce, honey, lime juice, sriracha and garlic." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 6 chicken thighs, bone-in &amp; skin on 4 tbsp ketchup (spicy, Polish ketchup recommended) 4 tbsp soy sauce 4 tbsp honey 1 lime, juiced 2 tbsp Sriracha 3 cloves garlic, minced Method Heat oil in large frying pan over high heat. Add chicken and sear until golden brown on both sides, 2-3 minutes on each side. Transfer chicken to slow cooker. In a bowl, combine ketchup, soy sauce, honey, lime juice, sriracha and garlic." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/slow-cooker-honey-sriracha-chicken/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  6 chicken thighs, bone-in &amp; skin on 4 tbsp ketchup (spicy, Polish ketchup recommended) 4 tbsp soy sauce 4 tbsp honey 1 lime, juiced 2 tbsp Sriracha 3 cloves garlic, minced  Method  Heat oil in large frying pan over high heat. Add chicken and sear until golden brown on both sides, 2-3 minutes on each side. Transfer chicken to slow cooker. In a bowl, combine ketchup, soy sauce, honey, lime juice, sriracha and garlic." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 6 chicken thighs, bone-in &amp; skin on 4 tbsp ketchup (spicy, Polish ketchup recommended) 4 tbsp soy sauce 4 tbsp honey 1 lime, juiced 2 tbsp Sriracha 3 cloves garlic, minced Method Heat oil in large frying pan over high heat. Add chicken and sear until golden brown on both sides, 2-3 minutes on each side. Transfer chicken to slow cooker. In a bowl, combine ketchup, soy sauce, honey, lime juice, sriracha and garlic." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
