--- a/recipes/slow_roasted_pork_belly_with_fennel/index.html
+++ b/recipes/slow_roasted_pork_belly_with_fennel/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Slow-Roasted Pork Belly with Fennel | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Slow-Roasted Pork Belly with Fennel" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1kg pork belly 1 fennel bulb, trimmed and roughly sliced 4 fresh bay leaves 3 garlic cloves, peeled and bashed 1 tsp cardamom pods, bashed 4 star anise 1 tbsp fennel seeds 325ml white wine 500-750ml chicken stock 1 tbsp wholegrain mustard  Method  Preheat the oven to 180C/fan 160C Score the pork belly skin diagonally in a diamond pattern at 1.5cm intervals. Season generously with salt and pepper rubbing it well into the skin." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 1kg pork belly 1 fennel bulb, trimmed and roughly sliced 4 fresh bay leaves 3 garlic cloves, peeled and bashed 1 tsp cardamom pods, bashed 4 star anise 1 tbsp fennel seeds 325ml white wine 500-750ml chicken stock 1 tbsp wholegrain mustard Method Preheat the oven to 180C/fan 160C Score the pork belly skin diagonally in a diamond pattern at 1.5cm intervals. Season generously with salt and pepper rubbing it well into the skin." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/slow_roasted_pork_belly_with_fennel/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1kg pork belly 1 fennel bulb, trimmed and roughly sliced 4 fresh bay leaves 3 garlic cloves, peeled and bashed 1 tsp cardamom pods, bashed 4 star anise 1 tbsp fennel seeds 325ml white wine 500-750ml chicken stock 1 tbsp wholegrain mustard  Method  Preheat the oven to 180C/fan 160C Score the pork belly skin diagonally in a diamond pattern at 1.5cm intervals. Season generously with salt and pepper rubbing it well into the skin." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 1kg pork belly 1 fennel bulb, trimmed and roughly sliced 4 fresh bay leaves 3 garlic cloves, peeled and bashed 1 tsp cardamom pods, bashed 4 star anise 1 tbsp fennel seeds 325ml white wine 500-750ml chicken stock 1 tbsp wholegrain mustard Method Preheat the oven to 180C/fan 160C Score the pork belly skin diagonally in a diamond pattern at 1.5cm intervals. Season generously with salt and pepper rubbing it well into the skin." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
