--- a/recipes/spanish-eggs/index.html
+++ b/recipes/spanish-eggs/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>&#34;Spanish&#34; Eggs | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="&#34;Spanish&#34; Eggs" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  1/2 ring of chorizo, chopped into small semi/quarter circles 1 red onion, sliced in half and chopped into thin semicircles 1 red or yellow pepper, deseeded and chopped into 1in chunks 2-3 eggs per person 2 garlic cloves, finely chopped 1.5 tsp chilli flakes (adjust to preference)  Method  Heat some oil in a pan over a medium heat. Add the chorizo and cook until they have released their oil and are becoming cooked." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 1/2 ring of chorizo, chopped into small semi/quarter circles 1 red onion, sliced in half and chopped into thin semicircles 1 red or yellow pepper, deseeded and chopped into 1in chunks 2-3 eggs per person 2 garlic cloves, finely chopped 1.5 tsp chilli flakes (adjust to preference) Method Heat some oil in a pan over a medium heat. Add the chorizo and cook until they have released their oil and are becoming cooked." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/spanish-eggs/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  1/2 ring of chorizo, chopped into small semi/quarter circles 1 red onion, sliced in half and chopped into thin semicircles 1 red or yellow pepper, deseeded and chopped into 1in chunks 2-3 eggs per person 2 garlic cloves, finely chopped 1.5 tsp chilli flakes (adjust to preference)  Method  Heat some oil in a pan over a medium heat. Add the chorizo and cook until they have released their oil and are becoming cooked." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 1/2 ring of chorizo, chopped into small semi/quarter circles 1 red onion, sliced in half and chopped into thin semicircles 1 red or yellow pepper, deseeded and chopped into 1in chunks 2-3 eggs per person 2 garlic cloves, finely chopped 1.5 tsp chilli flakes (adjust to preference) Method Heat some oil in a pan over a medium heat. Add the chorizo and cook until they have released their oil and are becoming cooked." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
