--- a/recipes/steak-pie/index.html
+++ b/recipes/steak-pie/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Steak Pie | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Steak Pie" />
-    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  900g stewing/braising steak, cut into cubes 25g plain flour, seasoned with salt and pepper 1 tbsp olive oil 2 onions, sliced 1 tbsp chopped fresh parsley 1 tbsp chopped fresh thyme 850ml / 1.5 pints hot beef stock 225g ready-rolled shortcrust pastry 1 egg, beaten  Method  Roll the cubed steak in the seasoned flour until well coated. Heat the oil in a large heavy-bottomed frying bowl and fry the meat, stirring frequently, until browned on all sides." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 900g stewing/braising steak, cut into cubes 25g plain flour, seasoned with salt and pepper 1 tbsp olive oil 2 onions, sliced 1 tbsp chopped fresh parsley 1 tbsp chopped fresh thyme 850ml / 1.5 pints hot beef stock 225g ready-rolled shortcrust pastry 1 egg, beaten Method Roll the cubed steak in the seasoned flour until well coated. Heat the oil in a large heavy-bottomed frying bowl and fry the meat, stirring frequently, until browned on all sides." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/steak-pie/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  900g stewing/braising steak, cut into cubes 25g plain flour, seasoned with salt and pepper 1 tbsp olive oil 2 onions, sliced 1 tbsp chopped fresh parsley 1 tbsp chopped fresh thyme 850ml / 1.5 pints hot beef stock 225g ready-rolled shortcrust pastry 1 egg, beaten  Method  Roll the cubed steak in the seasoned flour until well coated. Heat the oil in a large heavy-bottomed frying bowl and fry the meat, stirring frequently, until browned on all sides." />
+    <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • Ingredients 900g stewing/braising steak, cut into cubes 25g plain flour, seasoned with salt and pepper 1 tbsp olive oil 2 onions, sliced 1 tbsp chopped fresh parsley 1 tbsp chopped fresh thyme 850ml / 1.5 pints hot beef stock 225g ready-rolled shortcrust pastry 1 egg, beaten Method Roll the cubed steak in the seasoned flour until well coated. Heat the oil in a large heavy-bottomed frying bowl and fry the meat, stirring frequently, until browned on all sides." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
