--- a/recipes/stuffed-peppers/index.html
+++ b/recipes/stuffed-peppers/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Stuffed peppers with mushrooms | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Stuffed peppers with mushrooms" />
     <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • This vegan recipe is sure to impress your guests and makes for a lovely main course!
 Adapted from this recipe with slight alterations - check it out if you need visuals.
-Ingredients  11 peppers (I tend to use red or yellow) 3 brown onions, finely chopped 2 carrots, coarsely grated 300g Champignon mushrooms (any of the smaller mushrooms varieties should do), washed and finely chopped 200g rice (risotto or generally white rice) 1 bunch of fresh dill, finely chopped 1 can chopped tomatoes 1 tbsp dry thyme 60ml oil 1 tsp salt 1 tsp pepper 2 vegetable stock cubes  Method  Add oil to the pan along with the onions and the carrots, fry for 7-8 minutes." />
+Ingredients 11 peppers (I tend to use red or yellow) 3 brown onions, finely chopped 2 carrots, coarsely grated 300g Champignon mushrooms (any of the smaller mushrooms varieties should do), washed and finely chopped 200g rice (risotto or generally white rice) 1 bunch of fresh dill, finely chopped 1 can chopped tomatoes 1 tbsp dry thyme 60ml oil 1 tsp salt 1 tsp pepper 2 vegetable stock cubes Method Add oil to the pan along with the onions and the carrots, fry for 7-8 minutes." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -33,7 +33,7 @@ Ingredients  11 peppers (I tend to use red or yellow) 3 brown onions, finely cho
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/stuffed-peppers/thumbnail.png" />
     <meta property="og:image:alt" content="Difficulty: 1-medium • Meal: main_courses • This vegan recipe is sure to impress your guests and makes for a lovely main course!
 Adapted from this recipe with slight alterations - check it out if you need visuals.
-Ingredients  11 peppers (I tend to use red or yellow) 3 brown onions, finely chopped 2 carrots, coarsely grated 300g Champignon mushrooms (any of the smaller mushrooms varieties should do), washed and finely chopped 200g rice (risotto or generally white rice) 1 bunch of fresh dill, finely chopped 1 can chopped tomatoes 1 tbsp dry thyme 60ml oil 1 tsp salt 1 tsp pepper 2 vegetable stock cubes  Method  Add oil to the pan along with the onions and the carrots, fry for 7-8 minutes." />
+Ingredients 11 peppers (I tend to use red or yellow) 3 brown onions, finely chopped 2 carrots, coarsely grated 300g Champignon mushrooms (any of the smaller mushrooms varieties should do), washed and finely chopped 200g rice (risotto or generally white rice) 1 bunch of fresh dill, finely chopped 1 can chopped tomatoes 1 tbsp dry thyme 60ml oil 1 tsp salt 1 tsp pepper 2 vegetable stock cubes Method Add oil to the pan along with the onions and the carrots, fry for 7-8 minutes." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
