--- a/recipes/turkish-eggs/index.html
+++ b/recipes/turkish-eggs/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Turkish Eggs / Shakshuka | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Turkish Eggs / Shakshuka" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 small onion 4 eggs 1 tin chopped tomatoes 1 red pepper, deseeded and sliced 1-2 red chillies, deseeded and sliced 1-2 tsp caster sugar 2 sprigs thyme 1.5 tsp ground cumin 1 tbsp parsley, roughly chopped 2 garlic cloves, crushed 6 tbsp thick, creamy yogurt  Method  Heat the oil in a heavy-based frying pan. Stir in the onions, pepper and chillies. Cook until they begin to soften." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 2 small onion 4 eggs 1 tin chopped tomatoes 1 red pepper, deseeded and sliced 1-2 red chillies, deseeded and sliced 1-2 tsp caster sugar 2 sprigs thyme 1.5 tsp ground cumin 1 tbsp parsley, roughly chopped 2 garlic cloves, crushed 6 tbsp thick, creamy yogurt Method Heat the oil in a heavy-based frying pan. Stir in the onions, pepper and chillies. Cook until they begin to soften. Add the tomatoes and sugar, mixing well." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/turkish-eggs/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 small onion 4 eggs 1 tin chopped tomatoes 1 red pepper, deseeded and sliced 1-2 red chillies, deseeded and sliced 1-2 tsp caster sugar 2 sprigs thyme 1.5 tsp ground cumin 1 tbsp parsley, roughly chopped 2 garlic cloves, crushed 6 tbsp thick, creamy yogurt  Method  Heat the oil in a heavy-based frying pan. Stir in the onions, pepper and chillies. Cook until they begin to soften." />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: main_courses • Ingredients 2 small onion 4 eggs 1 tin chopped tomatoes 1 red pepper, deseeded and sliced 1-2 red chillies, deseeded and sliced 1-2 tsp caster sugar 2 sprigs thyme 1.5 tsp ground cumin 1 tbsp parsley, roughly chopped 2 garlic cloves, crushed 6 tbsp thick, creamy yogurt Method Heat the oil in a heavy-based frying pan. Stir in the onions, pepper and chillies. Cook until they begin to soften. Add the tomatoes and sugar, mixing well." />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
