--- a/recipes/view-all/index.html
+++ b/recipes/view-all/index.html
@@ -14,7 +14,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>All Recipes | CompSoc Cookbook</title>
     <meta property="og:title" content="All Recipes (no javascript)" />
@@ -96,6 +96,30 @@
   </a>
 </div>
 <ol class="recipe-listing row row-cols-2 row-cols-lg-4 g-4">
+  
+    <li class="recipe-listing-item col">
+      <a href="/recipes/kates_super_easy_chocolate_cheesecake/">
+        <div class="card h-100 "  role="article">
+          
+          <div class="card-body ">
+            <span class="meta">desserts / 0-easy</span>
+            <h4 class="display-5 mt-lg-3">Kate&#39;s Super Easy Chocolate Cheesecake</h2>
+          </div>
+        </div>
+      </a>
+    </li>
+  
+    <li class="recipe-listing-item col">
+      <a href="/recipes/kates_super_easy_spag_bol/">
+        <div class="card h-100 "  role="article">
+          
+          <div class="card-body ">
+            <span class="meta">main_courses / 0-easy</span>
+            <h4 class="display-5 mt-lg-3">Kate&#39;s Super Easy Spaghetti Bolognese</h2>
+          </div>
+        </div>
+      </a>
+    </li>
   
     <li class="recipe-listing-item col">
       <a href="/recipes/spanish-eggs/">
