--- a/recipes/wikipedia_pina_colada/index.html
+++ b/recipes/wikipedia_pina_colada/index.html
@@ -15,13 +15,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
+<link rel="stylesheet" integrity="sha256-gQRTC38gkbSVxgLqr8RU&#43;YnY8eeVQ2vAKkYyVg6xsvA=" href="https://cookbook.comp-soc.com/scss/main.min.8104530b7f2091b495c602eaafc454f989d8f1e795436bc02a4632560eb1b2f0.css">
 
     <title>Textbook (Wikipedia inspired) Piña Colada | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@compsoc" />
     <meta property="og:title" content="Textbook (Wikipedia inspired) Piña Colada" />
-    <meta property="og:description" content="Difficulty: 0-easy • Meal: cocktails • Ingredients  1 part white rum 1 part (Alpro) coconut drink 3 parts pineapple juice Ice  Method  Add ice to shaker Pour in all liquids Shake for an arbitrary amount of time Profit!  " />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: cocktails • Ingredients 1 part white rum 1 part (Alpro) coconut drink 3 parts pineapple juice Ice Method Add ice to shaker Pour in all liquids Shake for an arbitrary amount of time Profit! " />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
@@ -29,7 +29,7 @@
     <meta property="og:article:section" content="Recipes" />
     
     <meta property="og:image" content="https://cookbook.comp-soc.com/recipes/wikipedia_pina_colada/thumbnail.png" />
-    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: cocktails • Ingredients  1 part white rum 1 part (Alpro) coconut drink 3 parts pineapple juice Ice  Method  Add ice to shaker Pour in all liquids Shake for an arbitrary amount of time Profit!  " />
+    <meta property="og:image:alt" content="Difficulty: 0-easy • Meal: cocktails • Ingredients 1 part white rum 1 part (Alpro) coconut drink 3 parts pineapple juice Ice Method Add ice to shaker Pour in all liquids Shake for an arbitrary amount of time Profit! " />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     
